<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvOrigem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Origem"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etOrigem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Destino"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Button
        android:id="@+id/btIr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ir"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cancelar"
        android:textSize="18sp" />

</LinearLayout>