<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvProximoOnibus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ProximoOnibus"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etQntProximoOnibus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/tvParadaDesembarque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ParadaDesembarque"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etParadaDesembarque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/tvParadaEmbarque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ParadaEmbarque"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etParadaEmbarque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>

    <Button
        android:id="@+id/btVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Voltar" />

</LinearLayout>