<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvQntParadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QntParadas"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etQntParadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/tvTempoChegada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TempoChegada"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etTempoChegada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/tvProximaParada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ProximaParada"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etProximaParada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>

    <Button
        android:id="@+id/btDetalhes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Detalhes"
        android:textSize="18sp" />

</LinearLayout>